# calligraphyRecognize

./: build.gradle  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: aip.license  words.txt
app/src/main/assets/cpp/: caffe_jni.cpp
app/src/main/cpp/: native-lib.cpp
app/src/main/res/anim/: fab_pop_anim.xml
app/src/main/res/drawable/: layer_launcher.xml  shape_button.xml  shape_button_normal.xml  shape_button_pressed.xml
app/src/main/res/layout/: activity_aboutme.xml  activity_camera.xml  activity_display.xml  activity_image_show.xml  activity_login_main.xml  activity_main.xml  activity_normal_process.xml  activity_opencv.xml  activity_recognize.xml  activity_result.xml  activity_seek_bar_process.xml  activity_splash.xml  activity_start.xml  activity_test.xml  content_display.xml  dialog_long_click.xml  floatingactionbutton_content.xml  fragment_camera.xml  fragment_content.xml  fragment_list_view.xml  fragment_main_content.xml  fragment_main_select.xml  fragment_main_setting.xml  fragment_result_detail.xml  fragment_result_similar.xml  fragment_select.xml  fragment_setting.xml  item_activity_opencv.xml  item_activity_recognize.xml  item_activity_select.xml  item_content_select.xml  item_fragment_main_function.xml  item_fragment_select.xml  item_fragment_setting_switch.xml  item_fragment_setting_text_click.xml  layout_bottom_sheet.xml  layout_item.xml  preference_category_widget.xml  preference_item.xml  result_content.xml  (+2 more)
app/src/main/res/layout-land/: fragment_camera.xml
ocr_ui/: build.gradle
(+118 files in other folders)
